Some error about dark mode fixed

--- a/frontend/src/app/components/apartment-card/apartment-card.component.scss
+++ b/frontend/src/app/components/apartment-card/apartment-card.component.scss
@@ -6,6 +6,7 @@
     background-color: #F5F1ED;
     border: 1px solid black;
     margin: 1em 0 ;
+    color: black;
 }
 
 h3{
